Set questions done till 37

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -7080,15 +7080,82 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 32. Compare two sets."
+        "### 32. Compare two sets.\n",
+        "\n",
+        "* Difference\n",
+        "* Equality (same elements)\n",
+        "* IsSubset\n",
+        "* IsSuperset\n",
+        "* Union\n",
+        "* Intersection"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set1 - set2: {1, 2, 3, 4, 5}\n",
+            "Set2 - set1: {9, 10, 11, 12}\n",
+            "Are sets equal:  False\n",
+            "Is set1 subset of set2:  False\n",
+            "Is set2 subset of set1:  False\n",
+            "Is set1 superset of set2:  False\n",
+            "Is set2 superset of set1:  False\n",
+            "Union of sets:   {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 15}\n",
+            "intersection of sets:   {8, 15, 6, 7}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# In comparison of sets we will check some functions used above in few solutions\n",
+        "\n",
+        "# Create sets for comparison\n",
+        "\n",
+        "set_1 = {1,2,3,4,5,6,7,8,15}\n",
+        "set_2 = {6,7,8,9,10,11,12,15}\n",
+        "\n",
+        "# Difference of set1 to set2 [Elements in set 1 but not in set 2]\n",
+        "difference_set1_to_set2 = set_1.difference(set_2)\n",
+        "# Similarily difference of Set2 to set1\n",
+        "difference_set2_to_set1 = set_2.difference(set_1)\n",
+        "# Print differences\n",
+        "print('Set1 - set2:', difference_set1_to_set2)\n",
+        "print('Set2 - set1:', difference_set2_to_set1)\n",
+        "\n",
+        "# Equality\n",
+        "are_equal = set_1 == set_2\n",
+        "# Print equality\n",
+        "print('Are sets equal: ', are_equal)\n",
+        "\n",
+        "# Is Subset \n",
+        "is_set1_subset_of_set2 = set_1.issubset(set_2)\n",
+        "is_set2_subset_of_set1 = set_2.issubset(set_1)\n",
+        "# Print issubset results\n",
+        "print('Is set1 subset of set2: ', is_set1_subset_of_set2)\n",
+        "print('Is set2 subset of set1: ', is_set2_subset_of_set1)\n",
+        "\n",
+        "# Is Super set\n",
+        "is_set1_superset_of_set2 = set_1.issuperset(set_2)\n",
+        "is_set2_superset_of_set1 = set_2.issuperset(set_1)\n",
+        "# Print is superset results\n",
+        "print('Is set1 superset of set2: ', is_set1_superset_of_set2)\n",
+        "print('Is set2 superset of set1: ', is_set2_superset_of_set1)\n",
+        "\n",
+        "# Union of set_1 and set_2 (all elements of set_1 and set_2)\n",
+        "union_of_sets = set_1.union(set_2)\n",
+        "# PRint union\n",
+        "print('Union of sets:  ', union_of_sets)\n",
+        "\n",
+        "# Intersection of sets ( Common elements of sets)\n",
+        "intersection_of_sets = set_1.intersection(set_2)\n",
+        "# PRint intersection\n",
+        "print('intersection of sets:  ', intersection_of_sets)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7099,10 +7166,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'o', 'R', 'n', 'i', 'b'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a string\n",
+        "string_1 = 'Robin'\n",
+        "\n",
+        "# Convert string to set\n",
+        "set_from_string = set(string_1)\n",
+        "\n",
+        "# Print string\n",
+        "print(set_from_string)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -7113,16 +7197,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{65, 34, 10, 12, 45, 56}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - take set of string as parameters and return set of integers\n",
+        "def convert_elements_of_set_to_int(set_of_strings: set) -> set:\n",
+        "    set_of_ints = set()\n",
+        "\n",
+        "    for string_element in set_of_strings:\n",
+        "        set_of_ints.add(int(string_element))\n",
+        "\n",
+        "    return set_of_ints\n",
+        "\n",
+        "# Create a set of strings\n",
+        "set_input = {'10', '12', '34', '45', '56', '65'}\n",
+        "\n",
+        "# Convert to set of ints\n",
+        "set_of_intgrs = convert_elements_of_set_to_int(set_input)\n",
+        "\n",
+        "# Print\n",
+        "print(set_of_intgrs)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 35. Convert a set of integers to a set of strings."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'45', '12', '56', '65', '34', '10'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - take set of integers as parameters and return set of string\n",
+        "def convert_elements_of_set_to_string(set_of_ints: set) -> set:\n",
+        "    set_of_strings = set()\n",
+        "\n",
+        "    for string_element in set_of_ints:\n",
+        "        set_of_strings.add(str(string_element))\n",
+        "\n",
+        "    return set_of_strings\n",
+        "\n",
+        "# Create a set of int\n",
+        "set_input = {65, 34, 10, 12, 45, 56}\n",
+        "\n",
+        "# Convert to set of string\n",
+        "set_of_strings = convert_elements_of_set_to_string(set_input)\n",
+        "\n",
+        "# Print\n",
+        "print(set_of_strings)"
       ]
     },
     {
@@ -7133,10 +7276,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1.4, 5, 7, 8, 'Robin'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a tuple\n",
+        "tple = (1.4, 5, 7, 8, 'Robin')\n",
+        "\n",
+        "# Convert to set\n",
+        "set_from_tuple = set(tple)\n",
+        "\n",
+        "# Print\n",
+        "print(set_from_tuple)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 37. Convert a set to a tuple."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1.4, 5, 7, 8, 'Robin')\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set\n",
+        "set = {1.4, 5, 7, 5, 8, 'Robin'}\n",
+        "\n",
+        "# Convert to tuple\n",
+        "tuple_from_set = tuple(tple)\n",
+        "\n",
+        "# Print\n",
+        "print(tuple_from_set)"
       ]
     },
     {
@@ -7145,6 +7336,13 @@
       "source": [
         "### 38. Find the maximum value in a set."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
