Completed the assignment, finally.

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -2,6 +2,14 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Note\n",
+        "> I have used visual studio code to create this ipynb file (from mid of string questions), so input values are not displayed in output under the code cell"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "rqaKSZ7_BfaB"
       },
@@ -7308,23 +7316,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(1.4, 5, 7, 8, 'Robin')\n"
+            "('Robin', 1.4, 5, 7, 8)\n"
           ]
         }
       ],
       "source": [
         "# Create a set\n",
-        "set = {1.4, 5, 7, 5, 8, 'Robin'}\n",
+        "set_1 = {1.4, 5, 7, 5, 8, 'Robin'}\n",
         "\n",
         "# Convert to tuple\n",
-        "tuple_from_set = tuple(tple)\n",
+        "tuple_from_set = tuple(set_1)\n",
         "\n",
         "# Print\n",
         "print(tuple_from_set)"
@@ -7339,16 +7347,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Max element of the set is: 951\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using max in build funtion\n",
+        "\n",
+        "# Create Set\n",
+        "set_1 = {1, 34, 56, 78, 99, 456, 951, 45}\n",
+        "\n",
+        "# Get max element of set\n",
+        "max_element = max(set_1)\n",
+        "\n",
+        "# Print\n",
+        "print(f'Max element of the set is: {max_element}')"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 39. Find the minimum value in a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Min element of the set is: 10\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using min in build funtion\n",
+        "\n",
+        "# Create Set\n",
+        "set_1 = {10, 34, 56, 78, 99, 456, 951, 45}\n",
+        "\n",
+        "# Get min element of set\n",
+        "min_element = min(set_1)\n",
+        "\n",
+        "# Print\n",
+        "print(f'Min element of the set is: {min_element}')"
       ]
     },
     {
@@ -7359,10 +7412,77 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Pabbi', 'pwskills', 'Robin', 'Hello', 'DL', 'ML', 'AI', '51'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take input of elements from the user, one element at time and keep adding it to the set\n",
+        "# We can take a number of elements user want to enter and then run loop for that range\n",
+        "\n",
+        "def create_set_from_input(number_of_elements: int) -> set:\n",
+        "    result_set = set()\n",
+        "\n",
+        "    for i in range(number_of_elements):\n",
+        "        element = input(f'Enter element number {i+1}: ')\n",
+        "        # add element added by user to set\n",
+        "        result_set.add(element)\n",
+        "    \n",
+        "    return result_set\n",
+        "\n",
+        "# Take an input from user that how many elements user want to enter\n",
+        "num_of_elements = int(input('Enter number of elements you want to add to set: '))\n",
+        "\n",
+        "# Create a set\n",
+        "result = create_set_from_input(num_of_elements)\n",
+        "\n",
+        "# print\n",
+        "print(result)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 41. Check if the intersection of two sets is empty."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Intersection of set_1 and set_2 is not empty : {3, 6}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function intersection\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get intersection of set_1 and set_2\n",
+        "intersection_of_sets = set_1.intersection(set_2)\n",
+        "\n",
+        "# Check if intersection is empty or not\n",
+        "if not intersection_of_sets:\n",
+        "    print('Intersection of set_1 and set_2 is empty.')\n",
+        "else:\n",
+        "    print('Intersection of set_1 and set_2 is not empty :', intersection_of_sets)"
       ]
     },
     {
@@ -7373,10 +7493,75 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0, 1, 2, 3, 5}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Using recurssion\n",
+        "# Fibonacci num formula = F(n) = F(n-2) + F(n-1) - clearly we can use reccurssion here\n",
+        "\n",
+        "def get_fibonacci_number(n:int)-> int:\n",
+        "    # if n = 0 then F = 0, if n = 1 then F = 1\n",
+        "    if n < 2:\n",
+        "        return n\n",
+        "    else:\n",
+        "        return get_fibonacci_number(n-1) + get_fibonacci_number(n-2)\n",
+        "\n",
+        "# Create empty set\n",
+        "fib_set = set()\n",
+        "\n",
+        "# get Fibonacci numbers\n",
+        "# Why we have range from 0 to 6 ? - Because 2nd and 3rd prime numbers are same i.e. 1 and 1, \n",
+        "# and set contains unique values so we will have to generate 6 values to get five elements in set\n",
+        "for i in range(0, 6):\n",
+        "    ith_fib_num = get_fibonacci_number(i)\n",
+        "    fib_set.add(ith_fib_num)\n",
+        "\n",
+        "# Print fibonacci set\n",
+        "print(fib_set)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 43. Remove duplicates from a list using sets."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 6, 7, 8, 9]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a list with duplicates\n",
+        "list_with_duplicates = [1, 2, 3, 4, 1, 4, 3, 2, 6, 7, 8, 9, 3, 1, 9]\n",
+        "\n",
+        "# Remove duplicates\n",
+        "set_from_list = set(list_with_duplicates)\n",
+        "\n",
+        "# List with unique values\n",
+        "list_with_unique_vals = list(set_from_list)\n",
+        "\n",
+        "# Print unique values\n",
+        "print(list_with_unique_vals)"
       ]
     },
     {
@@ -7387,10 +7572,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set 1 and Set 2 contains same elements.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 1, 4, 3, 2, 6, 7, 8, 9, 3, 1, 9}\n",
+        "set_2 = {1, 2, 3, 4, 6, 7, 8, 9}\n",
+        "\n",
+        "# Check for same elements\n",
+        "contains_same_elements = set_1 == set_2\n",
+        "\n",
+        "# print result\n",
+        "if contains_same_elements:\n",
+        "    print('Set 1 and Set 2 contains same elements.')\n",
+        "else:\n",
+        "    print('Set 1 and Set 2 does not contains same elements.')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 45. Create a set of the first `n` powers of 2."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{32, 1, 2, 64, 4, 128, 8, 16}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - takes number 'num' and return the set of n power of 2 - 2**n -- for each element where n is its index\n",
+        "def create_set_of_n_power_of_2(num_of_elements: int) -> set:\n",
+        "    result_set = set()\n",
+        "\n",
+        "    for num in range(0, num_of_elements):\n",
+        "        result_set.add(2**num)\n",
+        "\n",
+        "    return result_set\n",
+        "\n",
+        "\n",
+        "# Take input from user\n",
+        "num_of_elemnts = int(input('Enter number of elements in the set: '))\n",
+        "\n",
+        "# Compute set\n",
+        "result = create_set_of_n_power_of_2(num_of_elemnts)\n",
+        "\n",
+        "# Print result - result will not be in order (just to avoid confusion)\n",
+        "print(result)"
       ]
     },
     {
@@ -7401,10 +7648,70 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Common elements are : {80, 3, 4}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Create a set from list and then use intersection function\n",
+        "\n",
+        "# Create set and list\n",
+        "set_1 = {1, 3, 4, 5, 6, 2, 80}\n",
+        "list_1 = {3, 4, 80, 90, 34}\n",
+        "\n",
+        "# get common elements\n",
+        "common_elements = set_1.intersection(set(list_1))\n",
+        "\n",
+        "# Print Result\n",
+        "print(f'Common elements are : {common_elements}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 47. Create a set of the first `n` triangular numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0, 1, 66, 3, 36, 6, 105, 10, 45, 78, 15, 21, 55, 91, 28}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - formula for n level = (n +1)* n/2\n",
+        "\n",
+        "def get_triangular_number(level: int) -> int:\n",
+        "    return (level * (level + 1))//2\n",
+        "\n",
+        "# Take a input of number\n",
+        "n = int(input('Enter the number of elements: '))\n",
+        "\n",
+        "# Create set of triangular numbers\n",
+        "triangular_numbers = set()\n",
+        "\n",
+        "for i in range(n):\n",
+        "    triangular_number = get_triangular_number(i)\n",
+        "    triangular_numbers.add(triangular_number)\n",
+        "\n",
+        "# Print result - values will not be in order\n",
+        "print(triangular_numbers)"
       ]
     },
     {
@@ -7415,6 +7722,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set 1 is subset of set 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function issubset\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 20}\n",
+        "\n",
+        "# Get issubset of set_1 and set_2\n",
+        "is_subset_of_set_2 = set_1.issubset(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "if is_subset_of_set_2:\n",
+        "    print('Set 1 is subset of set 2')\n",
+        "else:\n",
+        "    print('Set 1 is not a subset of set 2')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -7422,10 +7759,76 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{0, 1}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Although even if number is 2 or it is 100 (true for each number > 2), we will only have two entries because set contains unique values\n",
+        "# Let us prove it here\n",
+        "\n",
+        "# Function - Takes 'n' as number of elements required in set and returns set\n",
+        "def get_set_of_alternating_values(n: int) -> set:\n",
+        "    alternating_set = set()\n",
+        "    for num in range(n):\n",
+        "        # below will add remainder of num divided by 2 which will be either 0 or 1; 0 for even and 1 for odd number\n",
+        "        alternating_set.add(num % 2)\n",
+        "\n",
+        "    return alternating_set\n",
+        "\n",
+        "\n",
+        "# Length of set\n",
+        "number_of_elements = 10\n",
+        "\n",
+        "# Get alternating set\n",
+        "alternating_set = get_set_of_alternating_values(num_of_elements)\n",
+        "\n",
+        "# print\n",
+        "print(alternating_set)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 50. Merge multiple sets into one."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Merged set is: {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Merging sets means taking all elements of sets that is union of sets\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1,2,3,4}\n",
+        "set_2 = {3,4,5,6,7}\n",
+        "set_3 = {6,7,8,9}\n",
+        "set_4 = {9,10,11}\n",
+        "\n",
+        "# Merge into one set - union can take any number of sets as paramer\n",
+        "merged_set = set_1.union(set_1, set_2, set_3, set_4)\n",
+        "\n",
+        "# Print\n",
+        "print(f'Merged set is: {merged_set}')"
       ]
     }
   ],
