--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -266,7 +266,7 @@
       ],
       "source": [
         "# Approach: Here we are going to count the number of vowels and then subtract it from length of string\n",
-        "# List on consonants is long so iterating in consonants is right approach, so using above approach\n",
+        "# List on consonants is long so iterating in consonants is not efficient approach, so using above approach\n",
         "\n",
         "# For completeness will redefine the VOWELS list here, so that solution is independent and complete\n",
         "VOWELS = ['a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U']\n",
