Corrected one answer

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -259,13 +259,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Enter a string to check count of Consonants:Robin Pabbi checking count of consonants\n",
-            "Number of consonants: 28\n"
+            "Number of consonants: 6\n"
           ]
         }
       ],
       "source": [
-        "# Approach: Here we are going to count the number of vowels and then subtract it from length of string\n",
+        "# Approach: Here we are going to count the number of characters which are not vowels and is alphabet\n",
         "# List on consonants is long so iterating in consonants is not efficient approach, so using above approach\n",
         "\n",
         "# For completeness will redefine the VOWELS list here, so that solution is independent and complete\n",
@@ -273,10 +272,11 @@
         "\n",
         "# Function to check count of Vowels\n",
         "def count_consonants(string_to_check:str) -> int:\n",
-        "  vowel_count:int = 0\n",
-        "  for vowel in VOWELS:\n",
-        "    vowel_count += string_to_check.count(vowel)\n",
-        "  return len(string_to_check) - vowel_count\n",
+        "  consonants_count:int = 0\n",
+        "  for char in string_to_check:\n",
+        "    if char not in VOWELS and char.isalpha():\n",
+        "      consonants_count += 1\n",
+        "  return consonants_count\n",
         "\n",
         "# Take input string from user\n",
         "string_to_count_consonants = input('Enter a string to check count of Consonants:')\n",
