--- a/DayWiseMaterial/Assignments/Assignment-Python - For loop.ipynb
+++ b/DayWiseMaterial/Assignments/Assignment-Python - For loop.ipynb
@@ -1558,24 +1558,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MEAN of [1, 2, 3, 4, 4, 5, 5, 6, 6, 6, 6, 7, 7, 8] is 5.0\n",
+      "MEDIAN of [1, 2, 3, 4, 4, 5, 5, 6, 6, 6, 6, 7, 7, 8] is 5.5\n",
+      "MODE of [1, 2, 3, 4, 4, 5, 5, 6, 6, 6, 6, 7, 7, 8] is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_of_elements = 0\n",
+    "count_of_elements = 0\n",
+    "\n",
+    "# Function - take a element (n) as input and keeps the sum of elements passed and count of elements passed in global variables\n",
+    "def sum_and_count(n: int):\n",
+    "    global sum_of_elements\n",
+    "    global count_of_elements\n",
+    "\n",
+    "    sum_of_elements += n\n",
+    "    count_of_elements += 1\n",
+    "\n",
+    "# Create a list\n",
+    "list_1 = [1,2,3,4,4,5,5,6,6,6,6,7,7,8]\n",
+    "\n",
+    "''' MEAN\n",
+    "\n",
+    "# MEAN using list comprehension - Mean = Average of list  \n",
+    "# Note- Although we can simplly do it using sum and len functions (sum(list_1)/len(list_1)) but we are using list comprehension as being asked\n",
+    "\n",
+    "# Approach - we use list comprehension to count the elements and sum of elements\n",
+    "# then we divide sum of elements with count\n",
+    "# sum_and_count function is called each time which take sum of elements and '''\n",
+    "_ = [sum_and_count(num) for num in list_1]\n",
+    "mean = sum_of_elements/count_of_elements\n",
+    "\n",
+    "'''# MEDIAN\n",
+    "# Median is center most element in the sorted list - for even number of elements it is average of n/2th and (n/2+1)th element, for odd it is (n+1)/2th element\n",
+    "\n",
+    "# since we already know the count of elements from above (using list comprehension) we will reuse it'''\n",
+    "median = 0\n",
+    "list_1 = sorted(list_1)\n",
+    "\n",
+    "index = count_of_elements//2\n",
+    "if count_of_elements%2 == 0:\n",
+    "    # Case of even numbers of elements \n",
+    "    # Sum of center two elements using list comprehension [although we can use it simply but as asked so using list comprehension]\n",
+    "    # index+1 - because upper bound is excluded\n",
+    "    sum_of_center_two_elements = sum([list_1[i] for i in range(index-1, index+1)])\n",
+    "    median = sum_of_center_two_elements/2\n",
+    "else:\n",
+    "    # case of odd numbers of elements\n",
+    "    median = list_1[index]\n",
+    "\n",
+    "# Mode - mode is an element which occured most of times in the list\n",
+    "\n",
+    "# Since we have to use list comprehension so we use counter \n",
+    "from collections import Counter\n",
+    "\n",
+    "def mode_of_list(list_input: list):\n",
+    "    countr = Counter(list_input)\n",
+    "    # using list comprehension - most_common return list of tuples\n",
+    "    return [key for key, value in countr.items() if value == countr.most_common(1)[0][1]]\n",
+    "\n",
+    "mode = mode_of_list(list_1)[0]\n",
+    "\n",
+    "# prints\n",
+    "print(f'MEAN of {list_1} is {mean}')\n",
+    "print(f'MEDIAN of {list_1} is {median}')\n",
+    "print(f'MODE of {list_1} is {mode}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 35. Create a program that generates Pascal's triangle up to a specified number of rows using list comprehension."
+    "### 35. Create a program that generates Pascal's triangle up to a specified number of rows using list comprehension.\n",
+    "\n",
+    ">Pascal's triangle is the triangular array of numbers that begins with 1 on the top and with 1's running down the two sides of a triangle.\n",
+    "\n",
+    ">In mathematics, Pascal's triangle is a triangular array of the binomial coefficients arising in probability theory, combinatorics, and algebra.\n",
+    "\n",
+    "\n",
+    "      1\n",
+    "     1 1\n",
+    "    1 2 1\n",
+    "\n",
+    "#### Pascal's triangle formula\n",
+    "For each level (height) 'h' and number 'i' from 0 to h (basically these are our columns in triangle)\n",
+    "> factorial(h) / (factorial(i) * factorial(h-i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1],\n",
+       " [1, 1],\n",
+       " [1, 2, 1],\n",
+       " [1, 3, 3, 1],\n",
+       " [1, 4, 6, 4, 1],\n",
+       " [1, 5, 10, 10, 5, 1],\n",
+       " [1, 6, 15, 20, 15, 6, 1],\n",
+       " [1, 7, 21, 35, 35, 21, 7, 1],\n",
+       " [1, 8, 28, 56, 70, 56, 28, 8, 1],\n",
+       " [1, 9, 36, 84, 126, 126, 84, 36, 9, 1]]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can create our own factorial function as done in previous assignments\n",
+    "# but we are using inbuilt function to be efficient\n",
+    "from math import factorial\n",
+    "\n",
+    "# Take a input for height of the triangle\n",
+    "height_of_triangle = int(input('Enter a height of triangle: '))\n",
+    "\n",
+    "# Approach -\n",
+    "# Since we have to use list compresion - we run two loops - one for height (0 to entered height of triangle)\n",
+    "# and inner loop for columns (values in row) 'i' from 0 to current height then we get value \n",
+    "\n",
+    "pascal_traingle = [[factorial(n) // (factorial(k) * factorial(n - k)) \n",
+    "                    for k in range(n+1)]\n",
+    "                    for n in range(height_of_triangle)]\n",
+    "\n",
+    "# check traingle\n",
+    "pascal_traingle"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1586,10 +1707,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of factorial is : [1, 2, 6, 24, 120]\n",
+      "Sum of digits of factorial is : [1, 2, 6, 6, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can create our own factorial function as done in previous assignments\n",
+    "# but we are using inbuilt function to be efficient\n",
+    "from math import factorial\n",
+    "\n",
+    "list_of_factorials = [ factorial(num) for num in range(1,6)]\n",
+    "\n",
+    "# Approach - for each number from 1 to 5\n",
+    "# Calculate factorial and convert it to string\n",
+    "# then usinf innee list comprehension loop on character and convert it to int and find sum of eacg digit from char\n",
+    "sum_of_factorial_digits = [ sum([ int(digit) for digit in str(factorial(num))]) for num in range(1,6)]\n",
+    "\n",
+    "# Print result\n",
+    "print(f'List of factorial is : {list_of_factorials}')\n",
+    "print(f'Sum of digits of factorial is : {sum_of_factorial_digits}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1600,10 +1745,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence entered is: \"My name is Robin Pabbi. I am a software developer with 13 years of experience\"\n",
+      "Longest words are:  ['experience']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Approach - convert string into list of words using split and then find maximum length of word\n",
+    "# Using LIST COMPREHENSION return list of words which have maximum length\n",
+    "\n",
+    "# Function - takes a string (sentence) and return list of longest words (can be 1 or more depending if there are more than 1 of same max length)\n",
+    "def get_longest_words(sentence: str) -> list:\n",
+    "    list_of_words = sentence.split(' ')\n",
+    "    # using list comprehension get max\n",
+    "    max_length = max([len(word) for word in list_of_words])\n",
+    "\n",
+    "    # Get words of max_length\n",
+    "    longest_words = [word for word in list_of_words if len(word) == max_length]\n",
+    "\n",
+    "    return longest_words\n",
+    "\n",
+    "# Get sentence input\n",
+    "sentence = input('Enter your sentence here:')\n",
+    "\n",
+    "# Get  longest words\n",
+    "longest_words = get_longest_words(sentence)\n",
+    "\n",
+    "# Prints\n",
+    "print(f'Sentence entered is: \"{sentence}\"')\n",
+    "print(f'Longest words are: ', longest_words)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1614,10 +1792,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strings with more than 3 vowels are : ['Robin Pabbi', 'Artificial Intelligence']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keeping the list of vowels to check from\n",
+    "VOWELS = ['a', 'e', 'i', 'o', 'u', 'A', 'E', 'I', 'O', 'U']\n",
+    "\n",
+    "# Function to check count of Vowels \n",
+    "# Here we iterate in string for each char and check if exists in the VOWELS then add 1 to count\n",
+    "def count_vowels(string_to_check:str) -> int:\n",
+    "  count:int = 0\n",
+    "  for char in string_to_check:\n",
+    "    if char in VOWELS:\n",
+    "        count += 1\n",
+    "  return count\n",
+    "\n",
+    "# Create a list of strings\n",
+    "list_of_strings = ['Robin Pabbi', 'Artificial Intelligence', 'ML', 'DL', 'RObin', 'PWSKills', 'Pabbi']\n",
+    "\n",
+    "# \n",
+    "list_of_string_more_than_3_vowels = [string  for string in list_of_strings if count_vowels(string) > 3]\n",
+    "\n",
+    "# Print\n",
+    "print(f'Strings with more than 3 vowels are : {list_of_string_more_than_3_vowels}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1628,10 +1835,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LIST of sum of digits \n",
+    "\n",
+    "# Approach = using list comprehension iterate on each num from  1 to 1000 (1001 upper bound)\n",
+    "# then using sum function in which again we pass the list comprehension (converting num to string and itergating on character and converting to int)\n",
+    "list_of_sum_of_digits = [ sum([int(char_digit) for char_digit in str(num)]) for num in range(1, 1001)]\n",
+    "\n",
+    "# Print\n",
+    "print(list_of_sum_of_digits)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1642,10 +1866,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime Palindromic numbers are: [11, 101, 131, 151, 181, 191, 313, 353, 373, 383, 727, 757, 787, 797, 919, 929]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Approach - using list comprehension iterate on each number and check if it is palindromic and check if prime then return it\n",
+    "# TO check palindromic we convert it to string and compare with reverse of string\n",
+    "# Assumption - single digit numbers are not considered as palindromic, so we start from 10\n",
+    "\n",
+    "import math\n",
+    "# Function to check if number is prime or not \n",
+    "# will try to divide a number from 2 to (n/2)+1 - (to optimize the function) - if number is divisible by any number the False\n",
+    "def is_prime(n:int) -> bool:\n",
+    "    if(n <= 1):\n",
+    "        return False\n",
+    "    range_num = math.floor(n/2) + 1\n",
+    "    # FOR LOOP - for checking prime number or not\n",
+    "    for i in range(2 , range_num):\n",
+    "        if(n%i == 0):\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Define a limit - Specific limit (let us say we want from 10 to 1000)\n",
+    "range_limit = range(10, 1001)\n",
+    "\n",
+    "# Compute prime and palindromic numbers in the specified limit - USING LIST COMPREHENSION\n",
+    "prime_palindromic_numbers = [num for num in range_limit if is_prime(num) and str(num) == str(num)[::-1]]\n",
+    "\n",
+    "# Print prime palindromic numbers\n",
+    "print(f'Prime Palindromic numbers are: {prime_palindromic_numbers}')"
+   ]
   }
  ],
  "metadata": {
